--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==6.7
 google-api-python-client==1.6.4
 pydub==0.20.0
 pyperclip==1.6.0
+pysrt==1.1.1
 python-vlc==3.0.101
 SpeechRecognition==3.8.1
 urwid==1.3.1
