Working on video

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==6.7
 google-api-python-client==1.6.4
 moviepy==0.2.3.2
 pyperclip==1.6.0
+PyQt5==5.10
 pysrt==1.1.1
 python-vlc==3.0.101
 SpeechRecognition==3.8.1
